sewup-derive/tests/compile-fail/ewasm_main.rs
use sewup_derive::ewasm_main;

#[ewasm_main]
fn main() -> Result<(), ()> {
    Ok(())
}
